force-app/main/default/objects/Scheduled_Job_Config__mdt/Scheduled_Job_Config__mdt.object-meta.xml
<CustomObject>
    <description>Generic scheduled job configuration. One record per job type (SLA Escalation, Report Generator, Data Cleanup, etc.). Stores interval, enabled flag, and class name. Queried by ScheduledJobController to start/stop jobs from LWC without anonymous Apex.</description>
    <label>Scheduled Job Config</label>
    <pluralLabel>Scheduled Job Configs</pluralLabel>
</CustomObject>