force-app/main/default/objects/Scheduled_Job_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description shown in the admin LWC. Explains what this job does and when it should run.</description>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>