force-app/main/default/objects/Scheduled_Job_Config__mdt/fields/Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Interval_Minutes__c</fullName>
    <description>Run interval in minutes. The controller builds a cron expression from this value. Default 15 for SLA Escalation. Subscriber-controlled so each customer can tune frequency without code changes.</description>
    <label>Interval Minutes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>