force-app/main/default/objects/Scheduled_Job_Config__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master toggle for this job. When false, ScheduledJobController will not allow scheduling. Subscriber-controlled so admins can disable jobs without unscheduling via Setup.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>