force-app/main/default/objects/Scheduled_Job_Config__mdt/fields/Job_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Class_Name__c</fullName>
    <description>Fully qualified Apex class name implementing Schedulable. Used by ScheduledJobController to instantiate the job via Type.forName(). Example: SLAEscalationJob.</description>
    <label>Job Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>